package com.example.entrepsim;

public enum InvestmentType {
    LEMONADE,
    DOG,
    RICE,
    RESTO,
    ESTATE,
    PHARMA,
    SPORTS,
    STOCK,
    SPACE,
    ASTRO
}
